Added update server

--- a/Chao Over Koco Mod/mod.ini
+++ b/Chao Over Koco Mod/mod.ini
@@ -7,7 +7,7 @@ Author="CyclonX"
 AuthorURL=""
 
 [Main]
-UpdateServer=""
+UpdateServer="https://raw.githubusercontent.com/CyclonX64/sf_chao_over_koco/main/Chao%20Over%20Koco%20Mod"
 SaveFile=""
 ID=""
 IncludeDir0="."
